# fcfUnion

./: CMakeLists.txt  LICENSE  README.md  union.hpp
examples/: config.json
examples/example001/: CMakeLists.txt  main.cpp
examples/example002/: CMakeLists.txt  main.cpp  unionImpl.cpp
examples/example003/: CMakeLists.txt
examples/example003/executable/: main.cpp
test/: CMakeLists.txt  cmpTest.cpp  eraseTest.cpp  example001.cpp  findTest.cpp  isTest.cpp  main.cpp  orderTest.cpp  shared.cpp  sharedUnit.cpp  test.cpp
test/example002/: CMakeLists.txt  main.cpp  unionImpl.cpp
tests/: CMakeLists.txt  cmpTest.cpp  eraseTest.cpp  errorTest.cpp  findTest.cpp  isTest.cpp  main.cpp  shared.cpp  sharedUnit.cpp  streamTest.cpp  test.cpp  test.hpp
